--- a/layouts/partials/bundle/body/end.html
+++ b/layouts/partials/bundle/body/end.html
@@ -1,2 +1,3 @@
 {{- partial "_bundle_styles" (slice . "body" "end") -}}
 {{- partial "_bundle_scripts" (slice . "body" "end") -}}
+{{- partial "_bundle_partials" (slice . "body" "end") -}}
