--- a/layouts/partials/bundle/body/start.html
+++ b/layouts/partials/bundle/body/start.html
@@ -1,2 +1,3 @@
 {{- partial "_bundle_styles" (slice . "body" "start") -}}
 {{- partial "_bundle_scripts" (slice . "body" "start") -}}
+{{- partial "_bundle_partials" (slice . "body" "start") -}}
