update for configs + readme

--- a/layouts/partials/_bundle_partials.html
+++ b/layouts/partials/_bundle_partials.html
@@ -2,8 +2,8 @@
 {{- $element := (index . 1) -}}
 {{- $position := (index . 2) -}}
 
-{{- range $key := $scope.Param "mods.bundles" -}}
-	{{- $partialPath := printf "bundle/_%s_%s_%s" $key.key $element $position -}}
+{{- range $key, $enabled := $scope.Param "mods.bundles" -}}
+	{{- $partialPath := printf "bundle/_%s_%s_%s" $key $element $position -}}
 	{{- if templates.Exists (printf "partials/%s.html" $partialPath) -}}
 		{{- partial $partialPath $scope -}}
 	{{- end -}}
